// Original file: exa/context_module_pb/context_module.proto

import type { ChatMessage as _exa_chat_pb_ChatMessage, ChatMessage__Output as _exa_chat_pb_ChatMessage__Output } from '../../exa/chat_pb/ChatMessage';

export interface ContextChangeChatMessageReceived {
  'chatMessages'?: (_exa_chat_pb_ChatMessage)[];
}

export interface ContextChangeChatMessageReceived__Output {
  'chatMessages': (_exa_chat_pb_ChatMessage__Output)[];
}
